--- a/Dockerfile-distributed
+++ b/Dockerfile-distributed
@@ -25,7 +25,7 @@ ENV PATH=/home/k6/node-v14.4.0-linux-x64-musl/bin:$PATH
 
 WORKDIR /go
 RUN go install github.com/playwright-community/playwright-go/cmd/playwright@latest
-RUN set -e && playwright install 2>&1 | tee  playwright-install.log && set +e
+RUN playwright install 2>&1 | tee  playwright-install.log
 RUN export PL_PATH_TEMP=$(cat playwright-install.log | sed -n "s/^.*Downloading\sdriver\sto\s*\(\S*\).*$/\1/p") \
     && export PW_SCRIPT_CONTENT=$(cat $PL_PATH_TEMP/playwright.sh | sed "s/\$SCRIPT_PATH\/node/node/") \
     && echo "$PW_SCRIPT_CONTENT" > $PL_PATH_TEMP/playwright.sh
